[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Snake/Snake.gd" type="Script" id=1]
[ext_resource path="res://scenes/Snake/Head/Head.tscn" type="PackedScene" id=2]

[node name="Snake" type="Node"]
script = ExtResource( 1 )

[node name="Head" parent="." instance=ExtResource( 2 )]
z_index = 2

[node name="Tween" type="Tween" parent="."]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="TailContainer" type="Node" parent="."]
[connection signal="area_entered" from="Head" to="." method="_on_Head_area_entered"]
[connection signal="hit" from="Head" to="." method="_on_Head_hit"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
